--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,4 +1,133 @@
 @import url(https://fonts.googleapis.com/css?family=Sniglet|Raleway:900);
+.hidden {
+  display: none;
+}
+.breadcrumb {
+  padding-left: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px;
+  margin-bottom: 1.5rem;
+  list-style: none;
+  background-color: #fff;
+}
+.breadcrumb-item + .breadcrumb-item::before {
+  display: inline-block;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  color: #536c79;
+  content: none;
+}
+// font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$blue-gray: #34495e;
+$blue-gray-darken: #2c3e50;
+$blue: #3498db;
+$blue-darken: #2980b9;
+$green: #1abc9c;
+$green-darken: #16a085;
+
+#breadcrumb {
+  list-style: none;
+  border-radius: 4px;
+  // display: inline-block;
+
+  .icon {
+    font-size: 14px;
+  }
+
+  li {
+    float: left;
+    a {
+      opacity: 0.8;
+      color: #fff;
+      display: block;
+      background: #f90;
+      text-decoration: none;
+      position: relative;
+      height: 40px;
+      line-height: 40px;
+      padding: 0 10px 0 5px;
+      text-align: center;
+      margin-right: 23px;
+    }
+    &:nth-child(even) {
+      a {
+        background-color: #f90;
+
+        &:before {
+          border-color: #f90;
+          border-left-color: transparent;
+        }
+        &:after {
+          border-left-color: #f90;
+        }
+      }
+    }
+    &:first-child {
+      a {
+        padding-left: 15px;
+        @include border-radius(4px 0 0 4px);
+        &:before {
+          border: none;
+        }
+      }
+    }
+    &:last-child {
+      a {
+        padding-right: 15px;
+        @include border-radius(0 4px 4px 0);
+        &:after {
+          border: none;
+        }
+      }
+    }
+
+    a {
+      &:before,
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        border: 0 solid #f90;
+        border-width: 20px 10px;
+        width: 0;
+        height: 0;
+      }
+      &:before {
+        left: -20px;
+        border-left-color: transparent;
+      }
+      &:after {
+        left: 100%;
+        border-color: transparent;
+        border-left-color: #f90;
+      }
+      &:hover {
+        background-color: $green;
+
+        &:before {
+          border-color: $green;
+          border-left-color: transparent;
+        }
+        &:after {
+          border-left-color: $green;
+        }
+      }
+      &:active {
+        background-color: $green-darken;
+
+        &:before {
+          border-color: $green-darken;
+          border-left-color: transparent;
+        }
+        &:after {
+          border-left-color: $green-darken;
+        }
+      }
+    }
+  }
+}
+/***************************************************************************************************/
 .btn-sm,
 .btn-group-sm > .btn {
   float: right;
@@ -15,11 +144,96 @@ body {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Sniglet", cursive;
+  // font-family: "Sniglet", cursive;
+  font-family: Courier New;
 }
+.arrow {
+  display: inline-block;
+  position: absolute;
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  line-height: 2em;
+  vertical-align: middle;
+  top: -22px;
+  right: 192px;
+}
+@-moz-keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -moz-transform: translateX(0);
+    transform: translateX(0);
+  }
+  40% {
+    -moz-transform: translateX(-30px);
+    transform: translateX(-30px);
+  }
+  60% {
+    -moz-transform: translateX(-15px);
+    transform: translateX(-15px);
+  }
+}
+@-webkit-keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  40% {
+    -webkit-transform: translateX(-30px);
+    transform: translateX(-30px);
+  }
+  60% {
+    -webkit-transform: translateX(-15px);
+    transform: translateX(-15px);
+  }
+}
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  40% {
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -webkit-transform: translateX(-30px);
+    transform: translateX(-30px);
+  }
+  60% {
+    -moz-transform: translateX(-15px);
+    -ms-transform: translateX(-15px);
+    -webkit-transform: translateX(-15px);
+    transform: translateX(-15px);
+  }
+}
+.arrow {
+  position: absolute;
+  top: -44px;
+  bottom: 0px;
+  left: 50%;
+  margin-left: -97px;
+  width: 40px;
+  height: 60px;
+}
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
 body {
-  // background: url("https://i-h2.pinimg.com/564x/4e/e1/69/4ee16933ee8154ecc3025b99153a4498.jpg")
-  //   no-repeat fixed;
   background: url("https://i-h2.pinimg.com/564x/5b/87/b5/5b87b51fa0e3a732e2b013a8da07e1e8.jpg")
     no-repeat fixed;
   -webkit-background-size: cover;
@@ -38,9 +252,10 @@ h1 {
   text-align: center;
 }
 .count {
-  font-size: 20px;
-  top: 22px;
-  left: 22px;
+  font-weight: bold;
+  font-size: 23px;
+  top: 43px;
+  left: 26px;
   position: absolute;
 }
 .editIcon {
@@ -52,7 +267,7 @@ h1 {
   margin-right: 12px;
 }
 .fa-stack-2x {
-  font-size: 2.3em;
+  font-size: 2.1em;
 }
 .h1User {
   font-weight: normal;
@@ -202,7 +417,7 @@ h2 {
   color: white;
 }
 .Iam {
-  padding: 75px 62px;
+  padding: 75px 50px;
   border: 3px solid #20a8d8;
   border-radius: 5px !important;
   float: right;
@@ -211,7 +426,7 @@ h2 {
   color: white;
 }
 .Reward {
-  padding: 75px 78px;
+  padding: 75px 82px;
   border: 3px solid #4dbd74;
   border-radius: 5px !important;
   font-weight: bold;
@@ -222,10 +437,35 @@ h2 {
 .user i {
   color: #4dbd74;
 }
+
+.fa-exclamation-circle:before {
+  position: absolute;
+  left: -11%;
+  top: -1%;
+  font-size: 63%;
+  padding: 9px 9px 9px 9px;
+  border-radius: 50%;
+  line-height: 0.8em;
+  color: white;
+  background: rgba(255, 0, 0, 0.85);
+  text-align: center;
+  min-width: 1em;
+  font-weight: bold;
+}
 .collect {
   margin-bottom: 15px;
   float: right;
   font-size: 25px;
+}
+.collect .fa-user {
+  position: absolute;
+  top: 1px;
+  left: 0px;
+}
+.star .fa-star {
+  position: absolute;
+  top: 1px;
+  left: 0px;
 }
 .star i {
   color: #20a8d8;
@@ -241,6 +481,9 @@ h2 {
 thead {
   color: white;
   background: #4d6d9a;
+}
+.logout {
+  float: right;
 }
 // .table-striped tbody tr:nth-of-type(odd) {
 //   background-color: rgba(0, 0, 0, 0.05);
@@ -423,6 +666,52 @@ label {
   color: #4dbd74;
 }
 
+/**************************** POP UP BOX ******************************** **************************/
+.span {
+  background: #f8f8f8;
+  border: 5px solid #dfdfdf;
+  color: #717171;
+  font-size: 13px;
+  height: 55px;
+  letter-spacing: 1px;
+  line-height: 15px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  top: -20px;
+  left: -224px;
+  display: none;
+  padding: 0px 70px;
+}
+
+.span:after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  width: 10px;
+  height: 10px;
+  border-bottom: 5px solid #dfdfdf;
+  border-right: 5px solid #dfdfdf;
+  background: #f8f8f8;
+  left: 50%;
+  margin-left: -10px;
+  -moz-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+// .fa-exclamation-triangle {
+//   // margin: 100px;
+//   float: left;
+//   position: relative;
+//   cursor: pointer;
+// }
+
+// .fa-exclamation-circle:hover .span {
+//   display: block;
+// }
+.fa-exclamation-circle:hover .span {
+  display: block;
+}
 @media only screen and (max-width: 445px) {
   .progressbar1 li {
     list-style-type: none;
@@ -455,19 +744,20 @@ label {
   .welcome {
     margin: 0 auto;
     width: 100%;
-    padding-top: 50px;
+    padding-top: 15px;
+    padding-bottom: 20px;
   }
   .feedNow {
-    padding: 65px 40px;
+    padding: 65px 44px;
   }
   .Tracking {
-    padding: 65px 44px;
+    padding: 65px 42px;
   }
   .Iam {
-    padding: 65px 26px;
+    padding: 65px 18px;
   }
   .Reward {
-    padding: 65px 44px;
+    padding: 65px 48px;
   }
   .rewardbreadcrumb {
     float: left;
