--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,6 +2,15 @@
 .hidden {
   display: none;
 }
+.welcome h2 {
+  margin-left: -40px;
+}
+.logout {
+  position: absolute;
+  right: -37px;
+  top: 7px;
+  font-size: 52px;
+}
 .breadcrumb {
   padding-left: 0px;
   display: flex;
@@ -220,10 +229,10 @@ body {
 }
 .arrow {
   position: absolute;
-  top: -44px;
-  bottom: 0px;
+  top: -26px;
+  bottom: 0;
   left: 50%;
-  margin-left: -97px;
+  margin-left: -67px;
   width: 40px;
   height: 60px;
 }
@@ -234,8 +243,7 @@ body {
 }
 
 body {
-  background: url("https://i-h2.pinimg.com/564x/5b/87/b5/5b87b51fa0e3a732e2b013a8da07e1e8.jpg")
-    no-repeat fixed;
+  background: url("../public/img/feedforward.jpg") no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -472,7 +480,7 @@ h2 {
 }
 .welcome {
   margin: 0 auto;
-  width: 43%;
+  width: 39%;
 }
 .breadcrumb {
   width: 55%;
@@ -729,7 +737,7 @@ label {
   }
   .validate {
     width: 97%;
-    margin-top: 37%;
+    // margin-top: 37%;
   }
   .input {
     width: 250px;
@@ -738,7 +746,8 @@ label {
     font-size: 3em;
   }
   .col-8 {
-    flex: 0 0 100%;
+    // flex: 0 0 100%;
+    flex: 0%;
     max-width: 100%;
   }
   .welcome {
@@ -761,9 +770,7 @@ label {
   }
   .rewardbreadcrumb {
     float: left;
-    /* display: inline-block; */
     width: 55%;
-    /* margin: 0 auto; */
     margin-top: 15px;
   }
   .validate2 {
@@ -772,6 +779,31 @@ label {
   .carousel {
     margin-top: 27px;
     width: 100%;
+  }
+  .welcome h2 {
+    margin-left: -16px;
+  }
+  .collect {
+    margin-right: 27px;
+  }
+  .logout {
+    position: absolute;
+    right: -8px;
+    top: 7px;
+    font-size: 47px;
+  }
+  .arrow {
+    position: absolute;
+    top: -26px;
+    bottom: 0;
+    left: 50%;
+    margin-left: -109px;
+    width: 40px;
+    height: 60px;
+  }
+  .breadcrumb {
+    width: 96%;
+    margin: 0 auto;
   }
 }
 
@@ -796,6 +828,16 @@ label {
   .option,
   .option2 {
     width: 123%;
+  }
+  .welcome h2 {
+    margin-left: -16px;
+  }
+
+  .logout {
+    position: absolute;
+    right: -8px;
+    top: 7px;
+    font-size: 47px;
   }
 }
 // @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
